check_err7.txt
warning: unused import: `VoxelChunk`
  --> astraweave-terrain\src\terrain_modifier.rs:20:32
   |
20 | use crate::{ChunkCoord, Voxel, VoxelChunk, VoxelGrid};
   |                                ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `HashMap`
  --> astraweave-terrain\src\terrain_modifier.rs:22:24
   |
22 | use std::collections::{HashMap, HashSet, VecDeque};
   |                        ^^^^^^^

warning: unused import: `std::f32::consts::PI`
   --> astraweave-materials\src\lib.rs:619:13
    |
619 |         use std::f32::consts::PI;
    |             ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: variable does not need to be mutable
   --> astraweave-materials\src\lib.rs:468:13
    |
468 |         let mut metallic_roughness = vec![[0.0f32, 0.5, 0.0, 1.0]; total_pixels];
    |             ----^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `astraweave-terrain` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-terrain` to apply 2 suggestions)
warning: `astraweave-materials` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-materials` to apply 2 suggestions)
warning: variable does not need to be mutable
   --> astraweave-render\src\gpu_memory.rs:136:13
    |
136 |         let mut mgr = Self::new();
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `astraweave-render` (lib) generated 1 warning (run `cargo fix --lib -p astraweave-render` to apply 1 suggestion)
    Checking hello_companion v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\hello_companion)
warning: unused import: `NpcDialogueState`
 --> examples\hello_companion\src\chat_ui.rs:5:30
  |
5 | use crate::scene::{DemoMode, NpcDialogueState};
  |                              ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Mat4` and `Quat`
 --> examples\hello_companion\src\scene.rs:9:12
  |
9 | use glam::{Mat4, Quat, Vec3};
  |            ^^^^  ^^^^

warning: unused import: `std::sync::Arc`
  --> examples\hello_companion\src\scene.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
  --> examples\hello_companion\src\scene.rs:11:5
   |
11 | use wgpu::util::DeviceExt;
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:155:29
    |
155 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:161:29
    |
161 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:167:29
    |
167 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:173:29
    |
173 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:197:29
    |
197 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:204:29
    |
204 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

error[E0308]: mismatched types
   --> examples\hello_companion\src\visual_demo.rs:74:44
    |
74  |           let instance = wgpu::Instance::new(wgpu::InstanceDescriptor {
    |  ________________________-------------------_^
    | |                        |
    | |                        arguments to this function are incorrect
75  | |             backends: wgpu::Backends::all(),
76  | |             ..Default::default()
77  | |         });
    | |_________^ expected `&InstanceDescriptor`, found `InstanceDescriptor`
    |
note: associated function defined here
   --> C:\Users\pv2br\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wgpu-25.0.2\src\api\instance.rs:115:12
    |
115 |     pub fn new(_instance_desc: &InstanceDescriptor) -> Self {
    |            ^^^
help: consider borrowing here
    |
74  |         let instance = wgpu::Instance::new(&wgpu::InstanceDescriptor {
    |                                            +

error[E0063]: missing field `trace` in initializer of `DeviceDescriptor<Option<&str>>`
  --> examples\hello_companion\src\visual_demo.rs:97:18
   |
97 |                 &wgpu::DeviceDescriptor {
   |                  ^^^^^^^^^^^^^^^^^^^^^^ missing `trace`

error[E0061]: this method takes 1 argument but 2 arguments were supplied
   --> examples\hello_companion\src\visual_demo.rs:96:14
    |
96  |             .request_device(
    |              ^^^^^^^^^^^^^^
...
103 |                 None,
    |                 ---- unexpected argument #2 of type `Option<_>`
    |
note: method defined here
   --> C:\Users\pv2br\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wgpu-25.0.2\src\api\adapter.rs:60:12
    |
60  |     pub fn request_device(
    |            ^^^^^^^^^^^^^^
help: remove the extra argument
    |
102 -                 },
103 -                 None,
102 +                 },
    |

warning: unreachable statement
   --> examples\hello_companion\src\main.rs:187:5
    |
183 |         return visual_demo::run_visual_demo();
    |         ------------------------------------- any code following this expression is unreachable
...
187 |     println!("ΓòöΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòù");
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` on by default
    = note: this warning originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `text`
   --> examples\hello_companion\src\visual_demo.rs:430:25
    |
430 |             if let Some(text) = self.chat_ui.draw(ctx) {
    |                         ^^^^ help: if this is intentional, prefix it with an underscore: `_text`
    |
    = note: `#[warn(unused_variables)]` on by default

Some errors have detailed explanations: E0061, E0063, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `hello_companion` (bin "hello_companion") generated 12 warnings
error: could not compile `hello_companion` (bin "hello_companion") due to 3 previous errors; 12 warnings emitted
